# voice-visual-api

./: .gitignore  README.md  clean_surface_patched.py  commands.md  debug.txt  round2_main_controller.py  stretch_config_loader.py  stretch_main_controller_v2.py  test_funmap.py  test_joint.py  test_speed.py  test_voice.py
app/: app.py  audio.py  control.py  main.py  robot_control.py
capabilities/: ambient_movement.py  bed_demo.py  desk_demo.py  desk_demo_with_subprocess.py  drive_straight.py  facetrack.py  handwave.py  hello.py  kitchen_demo_final.py  left_turn_90.py  movement_to_desk.py  nod.py  prewipe_pose_test.py  prewipe_wipe_test.py  revised_bed_demo.py  social_distance.py  (+3 more)
src/stretch_study/: README.md  package.xml  setup.py
src/stretch_study/install/: local_setup.sh  setup.sh
src/stretch_study/install/stretch_study/share/stretch_study/: package.dsv  package.sh
src/stretch_study/install/stretch_study/share/stretch_study/config/: goals.yml
src/stretch_study/log/: latest_build
src/stretch_study/stretch_study/capabilities/: arm_commander.py  audio.py  deterministic_demos.py  funmap_navigator.py  nav2_navigator.py  pickup_drop_sequence.py  post_arrival.py  settings_bridge_server.py
src/stretch_study/stretch_study/config/: goals.yml
src/stretch_study/stretch_study/core/: script_steps.py
src/stretch_study/stretch_study/launch/: clean_surface_patched.launch.py
src/stretch_study/stretch_study/nodes/: clean_surface_exec.py  clean_surface_patched.py  cmd_vel_scaler.py  settings_bridge_server.py  speech_node.py  study_engine.py  voice_assistant_node.py
(+76 files in other folders)
