<?xml version="1.0"?>
<package format="3">
  <name>stretch_study</name>
  <version>0.1.0</version>
  <description>Deterministic, Tier-1 (manual station) study controller for Stretch 3 on ROS 2.</description>
  <maintainer email="example@example.com">Your Lab</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
